# biorose

./: LICENSE  README.md  pyproject.toml
.github/workflows/: biorose-package.yml  python-package.yml
data/: dna_sequence_002.txt  dna_sequence_004.txt  dna_sequence_006.txt  rna_sequence_002.txt  rna_sequence_004.txt
src/biorose/nucleic/: dna.py  nucleic.py  rna.py
src/biorose/sequence/: sequence.py
tests/: test_dna.py  test_nucleic_acid.py
