[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bioRose"
dynamic = ["version"]
requires-python = ">= 3.9"
dependencies = [
    "numpy==1.26.3",
    "pandas==2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "mypy==1.5",
]

[project.scripts]
biorose = "biorose.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "biorose.__version__"}
